--- a/src/config/global.css
+++ b/src/config/global.css
@@ -19,7 +19,7 @@ html, body {
     font-weight: bold;
     text-rendering: optimizeLegibility;
     overflow-x: hidden !important;
-    overflow: hidden;
+    overflow: hidden !important;
     text-decoration: none;
     position: absolute;
     scroll-behavior: smooth;
